# rinha-backend-q1

./: .gitignore  Dockerfile  Makefile  README.md  benchmark.py  docker-compose.yaml  executar-teste-local.sh  fastapi.dockerfile  plot.py  pyproject.toml  requisitos.txt  robyn.dockerfile  run-tests.sh  starlette.dockerfile  test_functional.py  uvicorn.dockerfile
load-test/user-files/simulations/rinhabackend/: RinhaBackendCrebitosSimulation.scala
rinha_de_backend/adapters/: __init__.py
rinha_de_backend/adapters/db/: __init__.py  in_memmory_user_repository.py  postgres_user_repository.py  sql_alchey_user_repository.py
rinha_de_backend/domain/: entities.py  exceptions.py
rinha_de_backend/entrypoints/web/: controller.py  data.py  exceptions.py
rinha_de_backend/entrypoints/web/servers/asgi/: __init__.py  router.py
rinha_de_backend/entrypoints/web/servers/fastapi/: __init__.py  __main__.py
rinha_de_backend/entrypoints/web/servers/robyn/: __main__.py
rinha_de_backend/entrypoints/web/servers/starlette/: __init__.py  __main__.py
rinha_de_backend/entrypoints/web/servers/uvicorn/: __main__.py
rinha_de_backend/services/: data.py  exceptions.py  handlers.py  protocols.py
tests/integration/: test_view.py
tests/unit/domain/: test_entities.py
tests/unit/entrypoint/: test_controller.py
tests/unit/entrypoint/servers/asgi/: test_router.py
tests/unit/services/: test_data.py  test_handlers.py
